full-profile/config/tap-singlecluster-stack.yaml
Description: "Custom VPC for TAP full-profile installation"
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: tap-workshop-singlecluster-vpc
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: "Enables SSH access to nodes."
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: tap-singlecluster-igw
  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ${AWS::Region}b
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: tap-public-subnet-b
  PublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ${AWS::Region}c
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: tap-public-subnet-c
  PublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetB
  PublicSubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetC
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: tap-public-route-table
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      GatewayId: !Ref InternetGateway
      DestinationCidrBlock: 0.0.0.0/0
  EKSClusterFull:
    Type: AWS::EKS::Cluster
    Properties:
      Name: tap-full
      Version: "1.23"
      RoleArn: "arn:aws:iam::964978768106:role/vmware-eks-role"
      ResourcesVpcConfig:
        SecurityGroupIds:
          - !Ref InstanceSecurityGroup
        SubnetIds:
          - !Ref PublicSubnetB
          - !Ref PublicSubnetC
  EKSNodeGroupView:
    Type: 'AWS::EKS::Nodegroup'
    DependsOn: EKSClusterFull
    Properties:
      NodegroupName: tap-full-node-group
      ClusterName: tap-full
      NodeRole: 'arn:aws:iam::964978768106:role/vmware-nodegroup-role'
      InstanceTypes: 
        - m5.2xlarge
      DiskSize: 80
      ScalingConfig:
        MinSize: 2
        DesiredSize: 4
        MaxSize: 4
      Subnets:
        - !Ref PublicSubnetB
        - !Ref PublicSubnetC
